unpackaged/main/default/objects/ccpe_r__Rate__c/ccpe_r__Rate__c.object-meta.xml
<CustomObject>
    <description>Rate object Created for a user against a Project or Project Task</description>
    <label>Rate</label>
    <nameField>
        <displayFormat>RATE-{0}</displayFormat>
        <label>Rate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>