unpackaged/main/default/objects/ccpe_r__Rate__c/fields/ccpe_r__Hash__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Hash__c</fullName>
    <formula>ccpe_r__User__c &amp; ccpe_r__Project__c &amp; ccpe_r__Project_Phase__c &amp; ccpe_r__Project_Task__c</formula>
    <label>Hash</label>
    <type>Text</type>
</CustomField>