unpackaged/main/default/objects/ccpe_r__Rate__c/fields/ccpe_r__Initial_Rate__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Initial_Rate__c</fullName>
    <label>Initial Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>