unpackaged/main/default/objects/ccpe_r__Rate__c/fields/ccpe_r__Override_Rate__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Override_Rate__c</fullName>
    <label>Override Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>