unpackaged/main/default/objects/ccpe_r__Rate__c/fields/ccpe_r__Project__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>Rates</relationshipLabel>
    <relationshipName>Rates</relationshipName>
    <type>Lookup</type>
</CustomField>