unpackaged/main/default/objects/ccpe_r__Rate__c/fields/ccpe_r__Standard_Cost__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Standard_Cost__c</fullName>
    <formula>ccpe_r__User__r.ccpe_r__Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>