unpackaged/main/default/objects/ccpe_r__Rate__c/fields/ccpe_r__Standard_Rate__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Standard_Rate__c</fullName>
    <description>This field has been deprecated in favour of the Initial Rate field.</description>
    <formula>ccpe_r__User__r.ccpe_r__Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deprecated (Standard Rate)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>