unpackaged/main/default/objects/ccpe_r__Rate__c/fields/ccpe_r__System_Cost__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__System_Cost__c</fullName>
    <formula>ccpe_r__User__r.ccpe_r__Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost (System)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>