unpackaged/main/default/objects/ccpe_r__Rate__c/fields/ccpe_r__User__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rates</relationshipName>
    <type>Lookup</type>
</CustomField>