unpackaged/main/default/objects/ccpe_r__Rate__c/validationRules/ccpe_r__User_Owner_Same.validationRule-meta.xml
<ValidationRule>
    <fullName>ccpe_r__User_Owner_Same</fullName>
    <active>true</active>
    <description>The User Lookup must match the Owner of the record.</description>
    <errorConditionFormula>OwnerId != ccpe_r__User__c</errorConditionFormula>
    <errorDisplayField>ccpe_r__User__c</errorDisplayField>
    <errorMessage>The user must be the same as the owner of the record</errorMessage>
</ValidationRule>