unpackaged/main/default/objects/ccpe_r__Rate__c/listViews/ccpe_r__All.listView-meta.xml
<ListView>
    <fullName>ccpe_r__All</fullName>
    <columns>NAME</columns>
    <columns>ccpe_r__User__c</columns>
    <columns>ccpe_r__Initial_Rate__c</columns>
    <columns>ccpe_r__Override_Rate__c</columns>
    <columns>ccpe_r__Standard_Cost__c</columns>
    <columns>ccpe_r__Project__c</columns>
    <columns>ccpe_r__Project_Phase__c</columns>
    <columns>ccpe_r__Project_Task__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>